# bb-cli

./: README.md  pyproject.toml
.github/workflows/: publish.yml
skills/bb/: SKILL.md
src/bb/: auth.py  cli.py  client.py
src/bb/api/: comments.py  pullrequests.py
src/bb/data/: SKILL.md
src/bbcli/: auth.py  cli.py  client.py  models.py
src/bbcli/api/: comments.py  pullrequests.py
