[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bb-cli"
version = "0.1.0"
description = "Bitbucket Cloud CLI for PR review workflows"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Version Control",
]
dependencies = [
    "httpx>=0.27",
    "click>=8.1",
    "keyring>=25.0",
    "rich>=13.0",
]

[project.scripts]
bb = "bbcli.cli:main"

[project.urls]
Homepage = "https://github.com/ali/bb-cli"
Repository = "https://github.com/ali/bb-cli"
Issues = "https://github.com/ali/bb-cli/issues"

[tool.setuptools.packages.find]
where = ["src"]
